# LD2

./: .gitignore  CMakeLists.txt  IF11_KairysA_LD1_dat1.json  IF11_KairysA_LD1_dat2.json  IF11_KairysA_LD1_dat3.json  IF11_KairysA_LD1_res.txt  Lifter.cpp  Lifter.h  a.out  main.cpp  run.sh
